Fixed z-indexes

--- a/css/user-area-career.css
+++ b/css/user-area-career.css
@@ -13,7 +13,7 @@
 .user-careeer-block,
 .user-careeer-stats-block {
 	position: relative;
-	z-index: 20;
+	z-index: 55;
 
 	width: 281.69px;
 	padding: 5px;
