--- a/css/user-area-main.css
+++ b/css/user-area-main.css
@@ -135,7 +135,7 @@
 
 .user-stats__item {
 	position: relative;
-	z-index: 5;
+	z-index: 55;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
